<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDisplayGray">

    <RelativeLayout
        android:id="@+id/container_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="1dp"
        android:background="@color/colorBackGround">

        <TextView
            android:id="@+id/chargeback_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:textColor="@color/colorTexts"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_title"
        android:background="@color/colorBackGround"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/container_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/padlock_image"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/ic_chargeback_unlock" />

            <TextView
                android:id="@+id/padlock_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/padlock_image"
                android:text="@string/text_lock_on"
                android:textColor="@color/colorRed"
                android:textSize="17sp" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_lock"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container_send_block"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/container_block"
        android:layout_marginTop="1dp"
        android:background="@color/colorBackGround">

        <EditText
            android:id="@+id/about_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/container_actions"
            android:background="@null"
            android:ems="10"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:textSize="17sp">

            <requestFocus />
        </EditText>


        <RelativeLayout
            android:id="@+id/container_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/cancel_btn"
                android:textColor="@color/colorClosedGray" />

            <Button
                android:id="@+id/contest_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/contest_btn"
                android:textColor="@color/colorDisplayGray" />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>