<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/colorBackGround">

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/dialog_title"
            android:textColor="@color/colorTitles"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/message_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_dialog"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/success_request" />

        <Button
            android:id="@+id/dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message_dialog"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/close_btn"
            android:textColor="@color/colorClosedGray" />
    </RelativeLayout>

</RelativeLayout>